2019-09-05      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (checkWholeSubOverflow) corrected
          comparison so that it matches the algorithm in the comment
	  above.

2019-09-04      Matthias Klose  <doko@cs.tu-berlin.de>

	* gm2/examples/gravity/testsim.py:  python2 to 3 conversion.
	* gm2/examples/gravity/testsim2.py:  python2 to 3 conversion.
	* gm2/examples/pge/examples/boxes.py:  python2 to 3 conversion.
	* gm2/examples/pge/examples/exampleBoxes.py:  python2 to 3 conversion.
	* gm2/examples/pge/examples/triangle.py:  python2 to 3 conversion.
	* gm2/examples/pge/fig.py:  python2 to 3 conversion.
	* gm2/examples/pge/max2code.py:  python2 to 3 conversion.
	* gm2/examples/pge/mxmmaxima.py:  python2 to 3 conversion.
	* gm2/examples/pge/mxmout.py:  python2 to 3 conversion.
	* gm2/examples/pge/mxmparser.py:  python2 to 3 conversion.
	* gm2/examples/pge/mxmtree.py:  python2 to 3 conversion.
	* gm2/examples/pge/pge.py:  python2 to 3 conversion.
	* gm2/examples/pge/pgeplayback.py:  python2 to 3 conversion.
	* gm2/examples/pge/pgepygame.py:  python2 to 3 conversion.
	* gm2/examples/pge/t.py:  python2 to 3 conversion.
	* gm2/examples/server/client.py:  python2 to 3 conversion.
	* gm2/examples/swig/dual/testdual.py:  python2 to 3 conversion.
	* gm2/examples/swig/exceptions/stresstiny.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/exceptions/testtiny.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/full-strlib/testcopy.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/full-strlib/testequ.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/full-strlib/testlen.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/full-strlib/testnum.py:  python2 to 3
	  conversion.
	* gm2/examples/swig/strlen/testlen.py:  python2 to 3 conversion.
	* gm2/examples/swig/strlib/testlen.py:  python2 to 3 conversion.
	* gm2/examples/swig/tiny/testtiny.py:  python2 to 3 conversion.
	* gm2/tools-src/array2index.py:  python2 to 3 conversion.