@@ -1,3 +1,11 @@
+2019-09-06      Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* gm2/gm2-gcc/m2expr.c:  (testWholeMultOverflow) New function.
+          (checkWholeMultOverflow) use testWholeMultOverflow.
+          (divMinUnderflow) New function.
+          (checkWholeDivTruncOverflow) check for multiply overflow
+	  and division overflow.
+
 2019-09-05      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* gm2/gm2-gcc/m2expr.c:  (checkWholeSubOverflow) corrected
